<resources>
    <string name="app_name">filmes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_password_confirm">Confirme a senha</string>
    <string name="forgot_password">Esqueceu a senha? Clique aqui!</string>
    <string name="create_count">Cadastre-se aqui</string>
    <string name="login_button">Entrar</string>
    <string name="login_disable">Conta desabilitada</string>
    <string name="login_not_found">Usuário não encontrado</string>
    <string name="login_invalid">Dados inválidos</string>
    <string name="login_error">Não foi possível efetuar login. Tente mais tarde</string>
    <string name="email_required">Email Obrigatório</string>
    <string name="password_required">Senha Obrigatório</string>
    <string name="invalid_email">Email invalido</string>
    <string name="password_minimum_length">Senha menor que 6 caracteres</string>
    <string name="create_account_button">Cadastrar</string>
    <string name="password_different">As senhas não conferem</string>

    <!-- Buttons-->
    <string name="back_button">Voltar</string>
    <string name="send_button">Enviar</string>

    <!-- Mensage -->
    <string name="forgot_password_send">Informe o Email no campo abaixo e pressione enviar. Um email de redefinição de senha sera encaminhado</string>
    <string name="send_email_sucesses">Email Enviado com sucesso</string>

    <!-- Labels-->
    <string name="releases">Lancamentos</string>
    <string name="all_filmes">Todos os Filmes</string>
    <string name="review_filmes">Reviews</string>
    <string name="gender_filmes">Gêneros</string>

    <string name="retry">Retry</string>

</resources>